bppackaging/src/objects/Service_Order_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Kit_Price__c</fullName>
        <label>Actual Kit Price</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CO_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CO Line Item</label>
        <referenceTo>CO_Line_Item__c</referenceTo>
        <relationshipLabel>Service Order Line Items</relationshipLabel>
        <relationshipName>Service_Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fee</label>
        <referenceTo>Fee__c</referenceTo>
        <relationshipLabel>Service Order Line Items</relationshipLabel>
        <relationshipName>Service_Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fixed_Price__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A checkbox to indicate that the user has set a fixed price for the Kit.</description>
        <label>Fixed Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Fixed_Kit_LineItem_SO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is_Fixed_Kit_LineItem_SO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_Desc__c</fullName>
        <description>Default setting of Item/Desc from Part and Labour Code</description>
        <formula>IF( 
	Part__c != null,  
	Part__r.Part_ID__c + &apos; - &apos; +  Part__r.Description__c ,  
	IF( Labour_Code__c != null,  
		Labour_Code__r.Code__c + &apos; - &apos; +  Labour_Code__r.Description__c , 
		IF( Fee__c != null,  
		        Fee__r.Fee_Unique_Name__c,
                        &apos;&apos;
		)
	) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item/Desc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kit_Price_With_Price_Level__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Kit Price With Price Level</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Kit_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Kit Price</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Labour_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Labour Code</label>
        <referenceTo>Labour_Code__c</referenceTo>
        <relationshipLabel>Service Order Line Items</relationshipLabel>
        <relationshipName>Service_Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Labour_Tax_Amount__c</fullName>
        <formula>( Kit_Price__c * Service_Order_Header__r.Labour_Tax__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Labour Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part</label>
        <referenceTo>Part__c</referenceTo>
        <relationshipLabel>Service Order Line Items</relationshipLabel>
        <relationshipName>Service_Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Qty_Committed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Qty Committed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qty_Needed__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Required Field.  The quantity of the item that is needed for the kit.</description>
        <label>Qty Needed</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qty_To_Order__c</fullName>
        <formula>IF(Part__c != null, Qty_Needed__c -  Qty_Committed__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qty To Order</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Retail_Price__c</fullName>
        <description>Default setting of Retail price based on Part and Labour code</description>
        <formula>IF( 
	Part__c != null,  
	Part__r.Retail_Price__c,  
	IF( Labour_Code__c != null,  
		Labour_Code__r.Rate__c , 
		0
	) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Retail Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Order_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Order Header</label>
        <referenceTo>Service_Order_Header__c</referenceTo>
        <relationshipLabel>Service Order Line Items</relationshipLabel>
        <relationshipName>Service_Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Order_Kit_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Order Kit Header</label>
        <referenceTo>Service_Order_Kit_Header__c</referenceTo>
        <relationshipLabel>Service Order Line Items</relationshipLabel>
        <relationshipName>Service_Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tax_Amount__c</fullName>
        <formula>(Qty_Needed__c * Kit_Price__c * Tax_Percent__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_Percent__c</fullName>
        <label>Tax Percent</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <formula>CO_Line_Item__r.Tax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <formula>Kit_Price__c  *  Qty_Needed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Service Order Line Item</label>
    <nameField>
        <displayFormat>SOLI-{00000000}</displayFormat>
        <label>Service Order Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Order Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>